[package]
authors = ["MathxH Chen <brainfvck@foxmail.com>"]
description = "A Simple Publicly Verifiable Secret Sharing Library"
edition = "2018"
keywords = ["secret sharing", "threshold cryptography", "zero knowledge proofs", "publicly verifiable secret sharing"]
license-file = "LICENSE"
name = "mpvss-rs"
readme = "README.md"
repository = "https://github.com/AlexiaChen/mpvss-rs"
version = "0.0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = {version = "0.2.6", features = ["rand"]}
num-integer = "0.1.44"
num-primes = "0.1.1"
num-traits = "0.2.11"
rand = "0.5.6"
sha2 = "0.9.2"
