[package]
authors = ["MathxH Chen <brainfvck@foxmail.com>"]
description = "A Simple Publicly Verifiable Secret Sharing Library"
edition = "2018"
keywords = ["pvss-scheme", "secret-sharing", "threshold-crypto", "zero-knowledge-proof"]
license = "MIT OR Apache-2.0"
name = "mpvss-rs"
readme = "README.md"
repository = "https://github.com/AlexiaChen/mpvss-rs"
version = "0.2.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = {version = "0.2.6", features = ["rand"]}
num-integer = "0.1.44"
num-primes = "0.1.2"
num-traits = "0.2.14"
rand = "0.5.6"
rayon = "1.5.0"
sha2 = "0.9.2"
